# naampy

./: .gitignore  Citation.cff  LICENSE  Makefile  README.md  README.rst  TODO  appveyor.yml  coverage.xml  naampy.yml  pyproject.toml  readthedocs.yml  requirements-rtd.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: docs.yml  python-publish.yml  test.yml
docs/: Makefile
docs/source/: about.md  api_reference.md  conf.py  getting_started.md  index.md  index.rst  modules.rst  naampy.rst  naampy.tests.rst  user_guide.md
docs/source/examples/: usage_examples.ipynb
model_training/: retransliterate_native.py  train_gender_lstm.py
model_training/data/: 01_download_in_rolls.ipynb  02_merge_in_rolls.ipynb  05_upload_naampy_dataverse.ipynb  06_download_naampy_dataverse.ipynb
model_training/model/: 01_data_processing_for_training.ipynb  02_training_model.ipynb  03_model_comparisions.ipynb
naampy/: __init__.py  in_rolls_fn.py  nnets.py  utils.py
naampy/data/in_rolls/: 01_download_in_rolls.ipynb  02_merge_in_rolls.ipynb  03_prepare_in_rolls_dataset.ipynb  04_naampy_dataset.ipynb  04_naampy_dataset_x1k.ipynb  05_upload_naampy_dataverse.ipynb  06_download_naampy_dataverse.ipynb  08_training_model.ipynb
naampy/data/ml_model/: 01_data_processing_for_training.ipynb  02_training_model.ipynb  03_model_comparisions.ipynb
naampy/model/naampy_rmse/: keras_metadata.pb  saved_model.pb
naampy/model/naampy_rmse/variables/: variables.data-00000-of-00001  variables.index
naampy/tests/: input-native.csv  test_010_in_rolls_ln.py  test_020_in_rolls_ln.py
streamlit/: requirements.txt  streamlit_app.py
tests/: __init__.py  input.csv  test_010_in_rolls_ln.py  test_020_in_rolls_ln.py  test_electoral_roll.py  test_integration.py  test_ml_model.py  test_native_scripts.py
