[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naampy"
version = "0.6.0"
description = "Infer Gender from Indian Names"
readme = "README.rst"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Gaurav Sood", email = "gsood07@gmail.com" },
  { name = "Suriyan Laohaprapanon", email = "suriyant@gmail.com" },
  { name = "Rajashekar Chintalapati", email = "rajshekar.ch@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]
keywords = ["gender", "names"]
dependencies = [
  "tensorflow<2.15",
  "numpy>=1.21,<1.25",
  "pandas>=0.19.2",
  "requests",
  "tqdm"
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage", "pytest"]

[project.urls]
"Homepage" = "https://github.com/appeler/naampy"
"Repository" = "https://github.com/appeler/naampy"
"Bug Tracker" = "https://github.com/appeler/naampy/issues"

[project.scripts]
in_rolls_fn_gender = "naampy.in_rolls_fn:main"

[tool.setuptools]
packages = ["naampy"]
include-package-data = true

[tool.setuptools.package-data]
naampy = [
  "model/naampy_rmse/variables/variables.*",
  "model/naampy_rmse/*.pb"
]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]
