[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[project]
name = "naampy"
version = "0.6.1"
description = "Infer Gender from Indian Names"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
  { name = "Gaurav Sood", email = "gsood07@gmail.com" },
  { name = "Suriyan Laohaprapanon", email = "suriyant@gmail.com" },
  { name = "Rajashekar Chintalapati", email = "rajshekar.ch@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]
keywords = ["gender", "names"]
dependencies = [
  "tensorflow>=2.13.0,<2.16.0",
  "keras>=2.13.1,<3.0.0",
  "numpy>=1.21.0,<1.25.0",
  "pandas>=1.5.0,<2.3.0",
  "requests>=2.25.0",
  "tqdm>=4.60.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.7.0",
    "mypy>=1.0",
    "types-requests>=2.25.0",
    "pre-commit>=3.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
]

[project.urls]
Homepage = "https://github.com/appeler/naampy"
Documentation = "https://appeler.github.io/naampy/"
Repository = "https://github.com/appeler/naampy"
Issues = "https://github.com/appeler/naampy/issues"
Changelog = "https://github.com/appeler/naampy/blob/main/CHANGELOG.md"

[project.scripts]
in_rolls_fn_gender = "naampy.in_rolls_fn:main"

[tool.uv.build-backend]
module-name = "naampy"
module-root = ""


# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "docs",
    ".eggs",
    "naampy/data",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/*" = ["S101"]  # use of assert

[tool.ruff.lint.isort]
known-first-party = ["naampy"]

# Ruff formatting configuration (replaces black)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["naampy"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = [
    "-ra",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# Coverage configuration (optional)
# To run with coverage: pytest --cov=naampy --cov-report=term-missing --cov-report=html

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'"
]

[tool.coverage.run]
source = ["naampy"]
branch = true


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
